[gd_scene load_steps=9 format=3 uid="uid://dc28b8hxkfb1l"]

[ext_resource type="Script" uid="uid://cgjavfmb1i3km" path="res://Scripts/Player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://31ggt6udmcvn" path="res://Sprites/Ships/ship_0000.png" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://drnp6qykkx7o8" path="res://Scripts/PlayerInput.gd" id="2_vgqql"]
[ext_resource type="Texture2D" uid="uid://m0d8mdvjq0qv" path="res://Sprites/Tiles/tile_0005.png" id="4_vgqql"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6t5aa"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:player_name")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:cur_weapon_heat")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:max_weapon_heat")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath(".:score")
properties/6/spawn = true
properties/6/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vgqql"]
properties/0/path = NodePath("InputSynchronizer:turn_input")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:throttle_input")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("InputSynchronizer:shoot_input")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fkybt"]
radius = 7.0
height = 24.0

[sub_resource type="Curve" id="Curve_fkybt"]
_data = [Vector2(0, 0), 0.0, 0.44638246, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 0
script = ExtResource("1_cvnsp")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6t5aa")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vgqql")
script = ExtResource("2_vgqql")

[node name="Ship" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("2_6t5aa")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.1764706)
z_index = 2
position = Vector2(0, 15)
texture = ExtResource("2_6t5aa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_fkybt")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(0, -12)

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="HitParticle" type="CPUParticles2D" parent="."]
z_index = 4
emitting = false
amount = 1
texture = ExtResource("4_vgqql")
lifetime = 0.2
one_shot = true
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 10.0
gravity = Vector2(0, 0)
angle_min = -45.0
angle_max = 45.0
scale_amount_min = 0.8
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_fkybt")

[connection signal="timeout" from="RespawnTimer" to="." method="respawn"]
